log/build_2023-07-05_11-40-36/application/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/spider/gwpspider_ws/install/application/lib/python3.10/site-packages/application/app.py", line 16
    from gwpspider_interfaces.srv import GetWalkingInstructions, GetModifiedWalkingInstructions, MoveLeg, MoveSpider, MoveGripper, DistributeForces, GetSpiderPose, ToggleAdditionalControllerMode, MoveLegVelocityMode, 
                                                                                                                                                                                                                         ^
SyntaxError: trailing comma not allowed without surrounding parentheses

